# AstraphosVC

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  opencode.json
.github/workflows/: ci.yml
api/: astraphosvc.h
benchmarks/: README.md
branches/: README.md
buildenv/: Dockerfile
cli/: avc_cli.c  avc_cli.h  main.c
commits/: README.md  avc_commit.c  avc_commit.h
compat/: avc_git_compat.c  avc_git_compat.h  avc_git_pack.c  avc_git_pack.h
compression/: README.md  avc_compress.c  avc_compress.h
config/: avc_config.c  avc_config.h
diff/: README.md  avc_diff.c  avc_diff.h
docs/: architecture.md  cli-reference.md  coding-standards.md  commit-format.md  developer-guide.md  git-compatibility.md  index-format.md  merge-algorithm.md  object-database.md  packfile-format.md  performance-guide.md  plugin-api.md  project-structure.md  protocol-specification.md  repository-format.md  testing-guide.md
examples/: README.md
hashing/: README.md  avc_hash.c  avc_hash.h
hooks/: README.md
index/: README.md  avc_index.c  avc_index.h
merge/: README.md  avc_merge.c  avc_merge.h
objects/: README.md  avc_object.c  avc_object.h  avc_oid.c  avc_oid.h
packfiles/: README.md  avc_pack.c  avc_pack.h
patch/: README.md
plugins/: README.md
protocol/: README.md
refs/: README.md  avc_refs.c  avc_refs.h
repository/: avc_repository.c  avc_repository.h
scripts/: astraphosvc-completion.bash  astraphosvc-completion.fish  astraphosvc-completion.zsh
security/: README.md
signing/: README.md
tags/: README.md
tests/integration/: test_phase1_cli.sh
tests/unit/: test_phase1.c  test_phase10.c  test_phase2.c  test_phase3.c  test_phase4.c  test_phase5.c  test_phase6.c  test_phase7.c  test_phase8.c  test_phase9.c
tools/: README.md
transport/: README.md  avc_remote.c  avc_remote.h
utils/: avc_error.c  avc_error.h  avc_fs.c  avc_fs.h  avc_log.c  avc_log.h
